<resources>
    <string name="app_name">Train Ponctuality</string>
    <string name="btnMenuInputDeparture">Départ</string>
    <string name="btnInputArrivalText">Arrivée</string>
    <string name="btnHistoryText">Historique</string>
    <string name="btnCancelDeparture">Annuler</string>
    <string name="txtMissionHint">Code mission</string>
    <string name="txtLineHint">Ligne</string>
    <string name="txtDepartureDateHint">Date de départ</string>
    <string name="txtLocationHint">Gare de départ</string>
    <string name="txtDepartureTimeHint">Heure de départ</string>
    <string name="btnSaveDeparture">Partir</string>
    <string name="txtArrivalDateHint">Date d\'arrivée</string>
    <string name="txtArrivalTimeHint">Heure d\'arrivée</string>
    <string name="txtLocationArrivalHint">Gare d\'arrivée</string>
    <string name="btnSaveArrival">Arriver</string>
    <string name="btnCancelArrival">Annuler</string>
    <string name="sncfJsonDateFormat">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="sncfJsonTimestamp">record_timestamp</string>
    <string name="sharedPrefs">default</string>
    <string name="prefsLastUpdateSncf">lastSncfUpdate</string>
    <string name="sncfGetGtfsDatasets">https://ressources.data.sncf.com/api/records/1.0/search/?dataset=sncf-transilien-gtfs</string>
    <string name="sncfDownloadDataset">https://ressources.data.sncf.com/explore/dataset/sncf-transilien-gtfs/files/%1s/download/</string>
    <string name="sncfGtfsRecord">records</string>
    <string name="sncfGtfsFields">fields</string>
    <string name="sncfGtfsFile">file</string>
    <string name="sncfGtfsFilename">filename</string>
    <string name="sncfGtfsId">id</string>
    <string name="sncfGtfsDatasetUsed">gtfs-lines-last.zip</string>
    <string name="zipSncf">sncfData.zip</string>
    <string name="unzipSncf">outSncf</string>
    <string name="sncfRouteFile">routes.txt</string>
    <string name="sncfTripsFile">trips.txt</string>
    <string name="sncfStopsFile">stops.txt</string>
    <string name="sncfStopTimesFile">stop_times.txt</string>
    <string name="sncfSCalendarFile">calendar.txt</string>
    <string name="Synchronize">Lecture des données de la SNCF</string>
    <string name="historyHeader">Historique</string>
    <string name="travelInProgress">Voyage en cours</string>
    <string name="txtMenuDeleteHistory">Supprimer</string>
    <string name="txtMenuEditHistory">Modifier</string>
    <string name="imgDeleteIcon">Icône de suppression</string>
    <string name="imgLine">Icône de la ligne</string>
    <string name="titleDeparture">Départ</string>
    <string name="titleArrival">Arrivée</string>
    <string name="titleHistory">Historique</string>
    <string name="validate">OK</string>
    <string name="titleEditTravel">Modifier le voyage</string>
    <string name="txtMenuValidate">Valider</string>
    <string name="txtMenuCancel">Annuler</string>
    <string name="txtArrival">Arrivée</string>
    <string name="txtDeparture">Départ</string>
</resources>
