<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_arrival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.arbogast.trainponctuality.GUI.InputArrivalActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtArrivalDate"
        android:hint="@string/txtArrivalDateHint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnSaveArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/btnSaveArrival"
        android:onClick="ValidateArrival" />

    <Button
        android:text="@string/btnCancelArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:id="@+id/btnCancelTrainArrival"
        android:onClick="CancelInputArrival"
        android:layout_alignBaseline="@+id/btnSaveArrival"
        android:layout_alignBottom="@+id/btnSaveArrival"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtLocation"
        android:hint="@string/txtLocationArrivalHint"
        android:layout_marginTop="97dp"
        android:layout_below="@+id/txtArrivalTime"
        android:layout_alignStart="@+id/txtArrivalTime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtArrivalTime"
        android:inputType="time"
        android:hint="@string/txtArrivalTimeHint"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txtArrivalDate"
        android:layout_alignStart="@+id/txtArrivalDate" />
</RelativeLayout>
