<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_departure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.arbogast.trainponctuality.gui.InputDepartureActivity">

    <TextView
        android:id="@+id/txtDepartureDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="24sp"
        android:hint="@string/txtDepartureDateHint"
        android:height="40dp"
        android:gravity="center"
        android:onClick="TextDepartureDateClicked" />

    <TextView
        android:id="@+id/txtDepartureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txtDepartureDate"
        android:layout_below="@id/txtDepartureDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtDepartureTimeHint"
        android:textSize="24sp"
        android:height="40dp"
        android:gravity="center"
        android:onClick="TextDepartureTimeClicked" />

    <Spinner
        android:id="@+id/spnLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDepartureTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:labelFor="@id/spnLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spnLine"
        android:layout_marginEnd="3dp"
        android:layout_toStartOf="@id/spnLine"
        android:text="@string/txtLineHint" />

    <AutoCompleteTextView
        android:id="@+id/actMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnLine"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:completionThreshold="1"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:minWidth="80dp"
        android:dropDownWidth="80dp"/>

    <TextView
        android:labelFor="@id/actMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/actMission"
        android:layout_marginEnd="3dp"
        android:layout_toStartOf="@id/actMission"
        android:text="@string/txtMissionHint" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actMission"
        android:layout_centerHorizontal="true"
        android:height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:freezesText="true"
        android:onClick="showStationList"
        android:text="@string/txtLocationHint"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSaveStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="35dp"
        android:onClick="ValidateDeparture"
        android:text="@string/btnSaveDeparture"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/btnCancelTrainStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnSaveStart"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:onClick="CancelInputDeparture"
        android:text="@string/btnCancelDeparture" />

</RelativeLayout>
