<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.arbogast.trainponctuality.gui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtStatus"
        android:text="@string/Synchronize"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/layoutTravel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_row="1"
        android:layout_column="0"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/travelInProgress"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/lytTravelContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">
        </FrameLayout>

    </LinearLayout>

    <Button
        android:text="@string/titleDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInputDeparture"
        android:onClick="InputDepartureClick"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <Button
        android:text="@string/titleArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInputArrival"
        android:onClick="InputArrivalClick"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <Button
        android:text="@string/titleHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHistory"
        android:onClick="InputHistoryClick"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

</GridLayout>
